// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data collection @atlaskit/cognize calls custom logger with data for \`targetImports\` only: calls custom logger with data for \`targetImports\` only 1`] = `

import React from 'react';
import { B200, N0, N70A } from '@atlaskit/theme/colors';
export default {
  B200,
  N0,
  N70A
};

      ↓ ↓ ↓ ↓ ↓ ↓

"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireDefault(require("react"));

var _colors = require("@atlaskit/theme/colors");

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var _default = {
  B200: _colors.B200,
  N0: _colors.N0,
  N70A: _colors.N70A
};
exports.default = _default;

`;

exports[`Data collection @atlaskit/cognize calls custom logger with data for CallExpression type: calls custom logger with data for CallExpression type 1`] = `

import React from 'react';
import { themeFunction } from '@atlaskit/theme';
export default (props) => themeFunction(props);

      ↓ ↓ ↓ ↓ ↓ ↓

"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireDefault(require("react"));

var _theme = require("@atlaskit/theme");

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var _default = props => (0, _theme.themeFunction)(props);

exports.default = _default;

`;

exports[`Data collection @atlaskit/cognize calls custom logger with data for JSXElement type with attributes: calls custom logger with data for JSXElement type with attributes 1`] = `

import React from 'react';
import Avatar from '@atlaskit/avatar';
export default () => <Avatar href="/path/to/item.html" />;

      ↓ ↓ ↓ ↓ ↓ ↓

"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireDefault(require("react"));

var _avatar = _interopRequireDefault(require("@atlaskit/avatar"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var _default = () => /*#__PURE__*/_react.default.createElement(_avatar.default, {
  href: "/path/to/item.html"
});

exports.default = _default;

`;

exports[`Data collection @atlaskit/cognize calls custom logger with data for JSXElement type: calls custom logger with data for JSXElement type 1`] = `

import React from 'react';
import Avatar from '@atlaskit/avatar';
export default () => <Avatar />;

      ↓ ↓ ↓ ↓ ↓ ↓

"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireDefault(require("react"));

var _avatar = _interopRequireDefault(require("@atlaskit/avatar"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var _default = () => /*#__PURE__*/_react.default.createElement(_avatar.default, null);

exports.default = _default;

`;

exports[`Data collection @atlaskit/cognize calls custom logger with data for MemberExpression type: calls custom logger with data for MemberExpression type 1`] = `

import React from 'react';
import { colors } from '@atlaskit/theme';
export default () => colors.B200;

      ↓ ↓ ↓ ↓ ↓ ↓

"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireDefault(require("react"));

var _theme = require("@atlaskit/theme");

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var _default = () => _theme.colors.B200;

exports.default = _default;

`;

exports[`Data collection @atlaskit/cognize calls custom logger with data for nested JSXElement type: calls custom logger with data for nested JSXElement type 1`] = `

import React from 'react';
import Avatar from '@atlaskit/avatar';
export default () => <div><Avatar /></div>;

      ↓ ↓ ↓ ↓ ↓ ↓

"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireDefault(require("react"));

var _avatar = _interopRequireDefault(require("@atlaskit/avatar"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var _default = () => /*#__PURE__*/_react.default.createElement("div", null, /*#__PURE__*/_react.default.createElement(_avatar.default, null));

exports.default = _default;

`;

exports[`Plugin options @atlaskit/cognize does not call custom logger if not passed through options: does not call custom logger if not passed through options 1`] = `

import React from 'react';
import { B200, N0, N70A } from '@atlaskit/theme/colors';
export default {
  B200,
  N0,
  N70A
};

      ↓ ↓ ↓ ↓ ↓ ↓

"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireDefault(require("react"));

var _colors = require("@atlaskit/theme/colors");

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var _default = {
  B200: _colors.B200,
  N0: _colors.N0,
  N70A: _colors.N70A
};
exports.default = _default;

`;

exports[`Plugin options @atlaskit/cognize does not parse file if \`ignoreDirs\` matches filename: does not parse file if \`ignoreDirs\` matches filename 1`] = `

// eslint-disable-next-line import/no-extraneous-dependencies
import { B200, N0, N70A } from '@atlaskit/theme/colors';

export default {
  B200,
  N0,
  N70A,
};

      ↓ ↓ ↓ ↓ ↓ ↓

"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;

var _colors = require("@atlaskit/theme/colors");

// eslint-disable-next-line import/no-extraneous-dependencies
var _default = {
  B200: _colors.B200,
  N0: _colors.N0,
  N70A: _colors.N70A
};
exports.default = _default;

`;

exports[`Plugin options @atlaskit/cognize loads custom visitor: loads custom visitor 1`] = `

import React from 'react';
import { B200, N0, N70A } from '@atlaskit/theme/colors';
const myFunc = () => B200();
myFunc();
export default {
  B200,
  N0,
  N70A
};

      ↓ ↓ ↓ ↓ ↓ ↓

"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireDefault(require("react"));

var _colors = require("@atlaskit/theme/colors");

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

const myFunc = () => (0, _colors.B200)();

myFunc();
var _default = {
  B200: _colors.B200,
  N0: _colors.N0,
  N70A: _colors.N70A
};
exports.default = _default;

`;

exports[`Plugins calls custom plugin @atlaskit/cognize calls plugin function: calls plugin function 1`] = `

import React from 'react';
import Avatar from '@atlaskit/avatar';
export default () => {
  return <div><Avatar /></div>;
}

      ↓ ↓ ↓ ↓ ↓ ↓

import React from 'react';
import Avatar from '@atlaskit/avatar';
export default (() => {
  return <div><Avatar /></div>;
});

`;

exports[`Transforms trackOnClient @atlaskit/cognize injects data-cognize and data-cognize-tracer in every JSX opening element: injects data-cognize and data-cognize-tracer in every JSX opening element 1`] = `

import React from 'react';
import Avatar from '@atlaskit/avatar';
const Link = () => <a href="/blah.html">Link</a>;
export default () => {
  return <div><Link /><Avatar /></div>;
}

      ↓ ↓ ↓ ↓ ↓ ↓

var _jsxFileName = "";
import React from 'react';
import Avatar from '@atlaskit/avatar';

const Link = () => <a href="/blah.html" data-cognize-tracer={function () {
  window.__COGNIZE__ = window.__COGNIZE__ || {};
  window.__COGNIZE__["_a_3_"] = {
    imports: "@atlaskit/avatar,Avatar",
    fileName: "",
    projectName: "@atlaskit/fabric",
    start: 3,
    column: 19,
    el: () => document.querySelector('[data-cognize=' + "_a_3_")
  };
  return;
}()} data-cognize={"_a_3_"}>Link</a>;

export default (() => {
  return <div data-cognize-tracer={function () {
    window.__COGNIZE__ = window.__COGNIZE__ || {};
    window.__COGNIZE__["_div_5_"] = {
      imports: "@atlaskit/avatar,Avatar",
      fileName: "",
      projectName: "@atlaskit/fabric",
      start: 5,
      column: 9,
      el: () => document.querySelector('[data-cognize=' + "_div_5_")
    };
    return;
  }()} data-cognize={"_div_5_"}><Link data-cognize-tracer={function () {
      window.__COGNIZE__ = window.__COGNIZE__ || {};
      window.__COGNIZE__["_Link_5_"] = {
        imports: "@atlaskit/avatar,Avatar",
        fileName: "",
        projectName: "@atlaskit/fabric",
        start: 5,
        column: 14,
        el: () => document.querySelector('[data-cognize=' + "_Link_5_")
      };
      return;
    }()} data-cognize={"_Link_5_"} /><Avatar data-cognize-tracer={function () {
      window.__COGNIZE__ = window.__COGNIZE__ || {};
      window.__COGNIZE__["_Avatar_5_"] = {
        imports: "@atlaskit/avatar,Avatar",
        fileName: "",
        projectName: "@atlaskit/fabric",
        start: 5,
        column: 22,
        el: () => document.querySelector('[data-cognize=' + "_Avatar_5_")
      };
      return;
    }()} data-cognize={"_Avatar_5_"} /></div>;
});

`;
